--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^4.4.0",
     "eslint": "^9.27.0",
+    "eslint-doc-generator": "^2.1.2",
     "eslint-plugin-eslint-plugin": "^6.4.0",
     "eslint-plugin-mocha": "^11.1.0",
     "husky": "^9.1.7",
