--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-eslint-plugin": "^6.4.0",
     "eslint-plugin-mocha": "^11.1.0",
     "husky": "^9.1.7",
+    "prettier": "^3.5.3",
     "semantic-release": "24.2.5",
     "vitest": "^3.1.4"
   },
