--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^4.4.1",
     "eslint": "^9.29.0",
-    "eslint-doc-generator": "^2.2.0",
+    "eslint-doc-generator": "^2.3.0",
     "eslint-plugin-eslint-plugin": "^6.5.0",
     "eslint-plugin-mocha": "^11.1.0",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
-    "semantic-release": "24.2.5",
+    "semantic-release": "^24.2.8",
     "vitest": "^3.2.4"
   },
   "scripts": {
